# WebAuthSystem

./: .gitignore  LICENSE  README.md  api.json  article.md  cookies.txt  mise.toml
backend/: .env  .env.example  .surrealdb  Cargo.toml  mise.toml
backend/events/: user.surql
backend/logs/: backend.log.2025-09-13  backend.log.2026-03-17
backend/migrations/: 20260323100320_users.up.sql  20260414071143_refresh_tokens.up.sql  20260414071200_verification_tokens.down.sql  20260414071200_verification_tokens.up.sql
backend/migrations/definitions/: _initial.json
backend/mise-tasks/: redis-start  redis-stop  surrealdb-start
backend/schemas/: refresh_token.surql  user.surql
backend/src/: app.rs  app_config.rs  app_state.rs  bootstrap.rs  lib.rs  main.rs
backend/src/application/: app_state.rs  error.rs  errors.rs  mod.rs
backend/src/application/auth/: mod.rs
backend/src/application/auth/cases/: forgot_password_case.rs  get_me_case.rs  login_case.rs  logout_case.rs  mod.rs  register_case.rs  reset_password_case.rs  send_verification_email_case.rs  validate_verification_case.rs
backend/src/application/auth/commands/: change_password_command.rs  forgot_password_command.rs  login_command.rs  mod.rs  register_command.rs  reset_password_command.rs  send_verification_email_command.rs  validate_verification_command.rs
backend/src/application/commands/: change_password_command.rs  forgot_password_command.rs  login_command.rs  mod.rs  register_command.rs  resend_verification_command.rs  reset_password_command.rs  rotate_refresh_token_command.rs  verify_command.rs
backend/src/application/errors/: helper.rs  mod.rs
backend/src/application/results/: change_password_result.rs  forgot_password_result.rs  login_result.rs  logout_result.rs  mod.rs  register_result.rs  resend_verification_result.rs  reset_password_result.rs  rotate_refresh_token_result.rs  verify_result.rs
backend/src/application/use_cases/: change_password_case.rs  forgot_password_case.rs  login_case.rs  logout_case.rs  mod.rs  register_case.rs  resend_verification_case.rs  reset_password_case.rs  rotate_refresh_token_case.rs  verify_case.rs
backend/src/application/user/: mod.rs
backend/src/config/: mod.rs  token.rs
backend/src/database/: client.rs  init.rs
backend/src/domain/: error.rs  errors.rs  mod.rs
backend/src/domain/auth/: errors.rs  mod.rs  repositories.rs  value_objects.rs
backend/src/domain/common/: error.rs
backend/src/domain/errors/: mod.rs
backend/src/domain/health/: errors.rs  repositories.rs
backend/src/domain/rbac/: errors.rs  mod.rs  policy.rs
backend/src/domain/user/: entities.rs  errors.rs  repositories.rs  value_objects.rs
backend/src/dto/request/: auth.rs
backend/src/dtos/: api_response.rs  mod.rs
backend/src/dtos/request/: login.rs  register.rs
backend/src/dtos/response/: user.rs
backend/src/errors/: app_error.rs
backend/src/handlers/: auth.rs  user.rs
backend/src/infrastructure/: error.rs  errors.rs  logger.rs  mod.rs
backend/src/infrastructure/caches/: mod.rs  user_repository.rs
backend/src/infrastructure/config/: jwt_config.rs  mod.rs  redis_config.rs  resend.rs  resend_config.rs  server.rs  server_config.rs  surreal.rs  surrealdb_config.rs
backend/src/infrastructure/errors/: access_token_service_error.rs  email_verification_token_repository_error.rs  mail_service_error.rs  mod.rs  password_service_error.rs  refresh_token_service_error.rs  user_repository_error.rs
backend/src/infrastructure/internal/: logger.rs  logo.rs  mod.rs
backend/src/infrastructure/layered/: cache_layer.rs  cache_store.rs  mod.rs  user_repository.rs
backend/src/infrastructure/mail/: mod.rs  verification_template.rs
backend/src/infrastructure/observability/: logger.rs
backend/src/infrastructure/token/: claims.rs  errors.rs  mod.rs  token_repositoy.rs
backend/src/middlewares/: auth.rs
backend/src/models/: audit_log.rs  refresh_token.rs  user.rs
backend/src/repositories/: auth.rs
backend/src/routes/: mod.rs  protected.rs  public.rs
backend/src/services/: auth.rs
backend/src/utils/: crypto.rs  token.rs
backend/src/validation/: auth.rs
(+555 files in other folders)
