[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["std"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-test = "18.6.0"
chrono = { version = "0.4.42", features = ["serde"] }
colorgrad = "0.8.0"
dotenvy = "0.15.7"
figment2 = { version = "0.11.4", features = ["env"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
owo-colors = "4.2.3"
redis = { version = "1.0.2", features = ["aio", "tokio-comp"] }
resend-rs = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "2.4.1" }
surrealdb-migrations = "2.4.0"
thiserror = { version = "2.0.17", features = ["std"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }
