[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["std"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-test = "19.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
colorgrad = "0.8.0"
dotenvy = "0.15.7"
figment2 = { version = "0.11.4", features = ["env"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
moka = { version = "0.12.14", features = ["future"] }
owo-colors = "4.3.0"
redis = { version = "1.0.2", features = ["aio", "tokio-comp"] }
resend-rs = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "2.6.0" }
surrealdb-migrations = "2.4.0"
thiserror = { version = "2.0.17", features = ["std"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4"] }
