[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
figment2 = { version = "0.11.4", features = ["env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = { version = "0.9.0", features = ["backtraces-impl-backtrace-crate"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["serde", "v4", "v7"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
redis = { version = "1.0.2", features = ["aio", "tokio-comp"] }
resend-rs = "0.23.0"
colorgrad = "0.8.0"
owo-colors = "4.3.0"
moka = { version = "0.12.14", features = ["future"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
regex = "1.12.3"
once_cell = "1.21.4"
futures-util = "0.3.32"
time = "0.3.47"
sha2 = "0.10.9"

[profile.dev.package.sqlx-macros]
opt-level = 3
